src/widgets/snapshots/timr_tui__widgets__pomodoro_test__max_rounds_last_round.snap
---
source: src/widgets/pomodoro_test.rs
expression: t.backend()
---
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                      █████ █████    █████ █████                      "
"                         ██ ██    ██ ██ ██ ██ ██                      "
"                      █████ █████    ██ ██ ██ ██                      "
"                      ██       ██ ██ ██ ██ ██ ██                      "
"                      █████ █████    █████ █████                      "
"                                                                      "
"                           POMODORO WORK []                           "
"                              LAST ROUND                              "
"                                                                      "
"                                                                      "
"                                                                      "
