src/widgets/snapshots/timr_tui__widgets__pomodoro_test__max_rounds_round_1.snap
---
source: src/widgets/pomodoro_test.rs
expression: t.backend()
---
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                      █████ █████    █████ █████                      "
"                         ██ ██    ██ ██ ██ ██ ██                      "
"                      █████ █████    ██ ██ ██ ██                      "
"                      ██       ██ ██ ██ ██ ██ ██                      "
"                      █████ █████    █████ █████                      "
"                                                                      "
"                           POMODORO WORK []                           "
"                             ROUND 1 OF 3                             "
"                                                                      "
"                                                                      "
"                                                                      "
