src/widgets/snapshots/timr_tui__widgets__pomodoro_test__max_rounds_round_2.snap
---
source: src/widgets/pomodoro_test.rs
expression: t.backend()
---
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                      █████ █████    █████ █████                      "
"                         ██ ██    ██ ██ ██ ██ ██                      "
"                      █████ █████    ██ ██ ██ ██                      "
"                      ██       ██ ██ ██ ██ ██ ██                      "
"                      █████ █████    █████ █████                      "
"                                                                      "
"                           POMODORO WORK []                           "
"                             ROUND 2 OF 3                             "
"                                                                      "
"                                                                      "
"                                                                      "
