src/widgets/snapshots/timr_tui__widgets__pomodoro_test__tabata_work.snap
---
source: src/widgets/pomodoro_test.rs
expression: t.backend()
---
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                              █████ █████                             "
"                                 ██ ██ ██                             "
"                              █████ ██ ██                             "
"                              ██    ██ ██                             "
"                              █████ █████                             "
"                                                                      "
"                            TABATA WORK []                            "
"                             ROUND 1 OF 8                             "
"                                                                      "
"                                                                      "
"                                                                      "
