src/widgets/snapshots/timr_tui__widgets__pomodoro_test__work_done.snap
---
source: src/widgets/pomodoro_test.rs
expression: t.backend()
---
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                 █████                                "
"                                 ██ ██                                "
"                                 ██ ██                                "
"                                 ██ ██                                "
"                                 █████                                "
"                                                                      "
"                          POMODORO WORK DONE                          "
"                               ROUND 1                                "
"                                                                      "
"                                                                      "
"                                                                      "
