src/widgets/snapshots/timr_tui__widgets__pomodoro_test__work_edit_minutes.snap
---
source: src/widgets/pomodoro_test.rs
expression: t.backend()
---
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                      █████ █████    █████ █████                      "
"                         ██ ██    ██ ██ ██ ██ ██                      "
"                      █████ █████    ██ ██ ██ ██                      "
"                      ██       ██ ██ ██ ██ ██ ██                      "
"                      █████ █████    █████ █████                      "
"                      ───────────                                     "
"                     POMODORO WORK [EDIT MINUTES]                     "
"                               ROUND 1                                "
"                                                                      "
"                                                                      "
"                                                                      "
