src/widgets/snapshots/timr_tui__widgets__pomodoro_test__work_edit_seconds.snap
---
source: src/widgets/pomodoro_test.rs
expression: t.backend()
---
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                 ██ █████                             "
"                                 ██    ██                             "
"                                 ██ █████                             "
"                                 ██ ██                                "
"                                 ██ █████                             "
"                              ───────────                             "
"                     POMODORO WORK [EDIT SECONDS]                     "
"                               ROUND 1                                "
"                                                                      "
"                                                                      "
"                                                                      "
