src/widgets/snapshots/timr_tui__widgets__pomodoro_test__work_pause_decis.snap
---
source: src/widgets/pomodoro_test.rs
expression: t.backend()
---
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                  █████ █████    █████ █████    █████                 "
"                     ██ ██    ██ ██ ██ ██ ██    ██ ██                 "
"                  █████ █████    ██ ██ ██ ██    ██ ██                 "
"                  ██       ██ ██ ██ ██ ██ ██    ██ ██                 "
"                  █████ █████    █████ █████ ██ █████                 "
"                                                                      "
"                           POMODORO WORK []                           "
"                                ROUND 1                               "
"                                                                      "
"                                                                      "
"                                                                      "
